# gridsens_gs2

./: .gitignore  .gitmodules  LICENSE  README.md
bootloader/: Makefile  ld.ld
bootloader/src/: bootloader_app_interface.hpp  cli.cpp  cli.hpp  main.cpp  uavcan.cpp  uavcan.hpp
bootloader/src/board/: app_storage_backend.hpp  board.cpp  board.hpp  can.hpp  usb_cdc_acm.cpp  usb_cdc_acm.hpp
bootloader/src/os_config/: board.h  chconf.h  halconf.h  mcuconf.h
datasheet/: .gitignore  Zubax_GNSS2_Datasheet.tex  Zubax_GNSS_2_Datasheet.tex
datasheet/document_templates/: README.md
datasheet/document_templates/documentation_template_latex/: README.md  zee.eps  zubax_logo.eps  zubax_logo_black.eps  zubaxdoc.cls
docs/: How-to-flash-GNSS-using-Dr-Watson.md
docs/datasheet/: Zubax_GNSS_2_Datasheet.tex  can_daisy_chain.eps
firmware/: Makefile  ld.ld  make_binaries.sh  make_can_boot_descriptor.py  make_release_binaries.sh
firmware/src/: air_sensor.cpp  air_sensor.hpp  bootloader_interface.cpp  bootloader_interface.hpp  cli.cpp  cli.hpp  component_status_manager.hpp  console.c  console.cpp  execute_once.hpp  gnss.cpp  gnss.hpp  magnetometer.cpp  magnetometer.hpp  main.c  main.cpp  node.cpp  node.hpp  uavcan.cpp  uavcan.hpp
firmware/src/board/: board.cpp  ms5611.c  (+11 more)
hardware/3d_printing_models/: baro_cover.SLDPRT  gnss_cover.SLDPRT  gnss_mount.SLDPRT  spacer.SLDPRT
test/: CMakeLists.txt  subscriber.cpp
tools/drwatson/: README.md  drwatson_zubax_gnss.py  run.sh  setup.sh
tools/linux_test_app/: subscriber.cpp
tools/serial_firmware_updater/: serial_firmware_updater.py
(+41 files in other folders)
